messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
  labels:
    app: messaging-app
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
        - name: messaging-app
          image: alx-backend-python/messaging_app:1.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-blue
spec:
  type: ClusterIP
  selector:
    app: messaging-app
    version: blue
  ports:
    - port: 8000
      targetPort: 8000
