messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
  labels:
    app: messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
        - name: messaging-app
          image: alx-backend-python/messaging_app:1.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app
spec:
  type: ClusterIP
  selector:
    app: messaging-app
  ports:
    - port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-exposed
spec:
  type: NodePort
  selector:
    app: messaging-app
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30000
