messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
  labels:
    app: messaging-app
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
    spec:
      containers:
        - name: messaging-app
          image: alx-backend-python/messaging_app:1.1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-green
spec:
  type: ClusterIP
  selector:
    app: messaging-app
    version: green
  ports:
    - port: 8000
      targetPort: 8000
