messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: messaging-app
            port:
              number: 8000
