messaging_app/kubeservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-router
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: messaging-app-blue
            port:
              number: 8000
